fix(header): revert z-index change

--- a/components/header/src/Header.module.scss
+++ b/components/header/src/Header.module.scss
@@ -20,8 +20,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  // NOTE: Tooltip's z-index is 1500.
-  z-index: 1501;
+  z-index: 10;
 
   ul {
     margin-bottom: 0;
